# Vink

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  TODO  arena.c  arena.h  array.c  array.h  autogen.sh  backend.c  backend.h  base64.c  base64.h  client.c  client.h  common.h  configure  configure.in  daemon.c  data.h  epp-client.c  epp-internal.h  epp.c  epp_internal.h  file-backend.c  gen-certificate.sh  hash.c  hash.h  http.c  io.c  io.h  ivinki.c  mail-internal.h  main.c  mime.c  peer.c  peer.h  postgresql.c  (+38 more)
doc/: draft-protocol-spec.html  rfc3920.txt  rfc5122.txt  wave-conversation-model.html  xep-0001.html  xep-0012.html  xep-0016.html  xep-0049.html  xep-0054.html  xep-0060.html  xep-0077.html  xep-0090.html  xep-0092.html  xep-0199.html  xep-0220.html
vinkweb/: 403.php  500.php  compose.php  config.inc.php  contacts.php  header.inc.php  index.html  index.php  session.inc.php  style.css  ui.js
