AC_INIT(vink,1.0.0,[Morten Hustveit <morten@rashbox.org>])
AM_INIT_AUTOMAKE

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_CHECK_FILE([/etc/pki/tls/cert.pem], [CAFILE=/etc/pki/tls/cert.pem], 
  AC_CHECK_FILE([/etc/ssl/certs/ca-certificates.crt], [CAFILE=/etc/ssl/certs/ca-certificates.crt],
                [AC_MSG_ERROR([no certificate authority file found])]))

AC_DEFINE(_GNU_SOURCE, [1], [GNU C Library extensions])
AC_DEFINE_UNQUOTED(CA_CERT_FILE, ["$CAFILE"], [Path of certificate authority database])
AC_DEFINE_UNQUOTED(SYSCONFDIR, ["$sysconfdir"], [Path of system configuration])
AC_DEFINE_UNQUOTED(LOCALSTATEDIR, ["$localstatedir"], [Path of local state])

AC_CONFIG_HEADERS([config.h])
AC_OUTPUT(Makefile)
